--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.24.0",
     "axios": "^1.7.9",
     "face-api.js": "^0.22.2",
+    "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
