--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "face-api.js": "^0.22.2",
     "jspdf-autotable": "^5.0.2",
     "moment": "^2.30.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
