--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,10 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@ant-design/charts": "^2.4.0",
+    "jspdf": "^2.5.2",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
