--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,107 +1,99 @@
-pip
-setuptools
-wheel
-absl-py==2.1.0
+absl-py==2.3.1
 annotated-types==0.7.0
-anyio==4.8.0
+anyio==4.9.0
 astunparse==1.6.3
-bcrypt==4.2.1
-beautifulsoup4==4.13.3
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
 blinker==1.9.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-cloudinary==1.42.2
-cryptography==44.0.1
+certifi==2025.7.9
+charset-normalizer==3.4.2
+click==8.2.1
+cloudinary==1.44.1
+colorama==0.4.6
 deepface==0.0.93
-dlib==19.24.6
 dnspython==2.7.0
-ecdsa==0.19.0
+dotenv==0.9.9
+ecdsa==0.19.1
 email_validator==2.2.0
-et_xmlfile==2.0.0
 facenet-pytorch==2.6.0
-fastapi==0.115.8
-filelock==3.17.0
+fastapi==0.116.0
+filelock==3.18.0
 fire==0.7.0
-Flask==3.1.0
-flask-cors==5.0.1
+Flask==3.1.1
+flask-cors==6.0.1
 flatbuffers==25.2.10
-fsspec==2025.3.0
+fsspec==2025.5.1
 gast==0.6.0
 gdown==5.2.0
 google-pasta==0.2.0
-grpcio==1.70.0
+greenlet==3.2.3
+grpcio==1.73.1
 gunicorn==23.0.0
-h11==0.14.0
-h5py==3.13.0
+h11==0.16.0
+h5py==3.14.0
 idna==3.10
-imutils==0.5.4
 itsdangerous==2.2.0
-Jinja2==3.1.5
-joblib==1.4.2
-jwt==1.3.1
-keras==3.8.0
+Jinja2==3.1.6
+joblib==1.5.1
+keras==3.10.0
 libclang==18.1.1
-lz4==4.4.3
-Markdown==3.7
+lz4==4.4.4
+Markdown==3.8.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
-ml-dtypes==0.4.1
-motor==3.7.0
+ml_dtypes==0.5.1
 mpmath==1.3.0
 mtcnn==1.0.0
-mysqlclient==2.2.7
-namex==0.0.8
-networkx==3.4.2
+Naked==0.1.32
+namex==0.1.0
+networkx==3.5
 numpy==1.26.4
-opencv-python==4.11.0.86
-openpyxl==3.1.5
+opencv-python==4.12.0.88
 opt_einsum==3.4.0
-optree==0.14.0
-packaging==24.2
-pandas==2.2.3
+optree==0.16.0
+packaging==25.0
+pandas==2.3.1
 passlib==1.7.4
 pillow==10.2.0
-protobuf==5.29.3
+protobuf==5.29.5
 pyasn1==0.6.1
-pycparser==2.22
-pydantic==2.10.6
-pydantic_core==2.27.2
-Pygments==2.19.1
-PyJWT==2.10.1
-pymongo==4.11.1
+pydantic==2.11.7
+pydantic_core==2.33.2
+Pygments==2.19.2
 PyMySQL==1.1.1
 PySocks==1.7.1
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-jose==3.3.0
+python-dotenv==1.1.1
+python-jose==3.5.0
 python-multipart==0.0.20
-pytz==2025.1
-requests==2.32.3
+pytz==2025.2
+PyYAML==6.0.2
+requests==2.32.4
 retina-face==0.0.17
-rich==13.9.4
-rsa==4.9
-setuptools==75.8.1
+rich==14.0.0
+rsa==4.9.1
+setuptools==80.9.0
+shellescape==3.8.1
 six==1.17.0
 sniffio==1.3.1
-soupsieve==2.6
-SQLAlchemy==2.0.38
-starlette==0.45.3
-sympy==1.13.3
-tensorboard==2.18.0
+soupsieve==2.7
+SQLAlchemy==2.0.41
+starlette==0.46.2
+sympy==1.14.0
+tensorboard==2.19.0
 tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-termcolor==2.5.0
-tf_keras==2.18.0
+tensorflow==2.19.0
+termcolor==3.1.0
+tf_keras==2.19.0
 torch==2.2.2
 torchvision==0.17.2
 tqdm==4.67.1
-typing_extensions==4.12.2
-tzdata==2025.1
-urllib3==2.3.0
-uvicorn==0.34.0
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+tzdata==2025.2
+urllib3==2.5.0
+uvicorn==0.35.0
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.2
